api/helm/aws/tailscale/operator-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: operator
    namespace: tailscale
spec:
    replicas: 1
    selector:
        matchLabels:
            app: operator
    strategy:
        type: Recreate
    template:
        metadata:
            labels:
                app: operator
        spec:
            containers:
                - env:
                    - name: OPERATOR_INITIAL_TAGS
                      value: tag:k8s-operator
                    - name: OPERATOR_HOSTNAME
                      value: tailscale-operator
                    - name: OPERATOR_SECRET
                      value: operator
                    - name: OPERATOR_LOGGING
                      value: info
                    - name: OPERATOR_NAMESPACE
                      valueFrom:
                        fieldRef:
                            fieldPath: metadata.namespace
                    - name: CLIENT_ID_FILE
                      value: /oauth/client_id
                    - name: CLIENT_SECRET_FILE
                      value: /oauth/client_secret
                    - name: TS_ACCEPT_DNS
                      value: "true"
                    - name: TS_EXTRA_ARGS
                      value: " --accept-routes"
                    # - name: PROXY_IMAGE
                    #   value: tailscale/tailscale:unstable
                    # - name: PROXY_TAGS
                    #   value: tag:k8s
                    # - name: APISERVER_PROXY
                    #   value: "true"
                    # - name: PROXY_FIREWALL_MODE
                    #   value: auto
                    # - name: TS_DNS
                    #   value: 100.100.100.100
                    - name: POD_NAME
                      valueFrom:
                        fieldRef:
                            fieldPath: metadata.name
                    - name: POD_UID
                      valueFrom:
                        fieldRef:
                            fieldPath: metadata.uid
                  image: tailscale/k8s-operator:unstable
                  imagePullPolicy: Always
                  name: operator
                  volumeMounts:
                    - mountPath: /oauth
                      name: oauth
                      readOnly: true
                  securityContext:
                    allowPrivilegeEscalation: true
                    capabilities:
                      add:
                        - NET_ADMIN
            nodeSelector:
                kubernetes.io/os: linux
            serviceAccountName: operator
            volumes:
                - name: oauth
                  secret:
                    secretName: operator-oauth
