api/helm/aws/tailscale/expose-router.yaml
apiVersion: v1
kind: Service
metadata:
  name: tailscale-router
  namespace: tailscale
spec:
  ports:
    - port: 53
      protocol: UDP
      targetPort: 33014
  selector:
    app: router
