api/helm/aws/tailscale/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: all-ports-service
  namespace: default
spec:
  selector:
    app: my-app
  type: ClusterIP
  ports:
  - protocol: TCP
    port: 0
    targetPort: 0
  - protocol: UDP
    port: 0
    targetPort: 0
